JDKを1.8に変更